autojoins for weechat

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -145,3 +145,41 @@ ssl_verify = on
 username = "davidosomething"
 
 [server]
+freenode.addresses = "chat.freenode.net/6697"
+freenode.proxy
+freenode.ipv6
+freenode.ssl = on
+freenode.ssl_cert
+freenode.ssl_priorities
+freenode.ssl_dhkey_size
+freenode.ssl_fingerprint
+freenode.ssl_verify
+freenode.password
+freenode.capabilities
+freenode.sasl_mechanism = ecdsa-nist256p-challenge
+freenode.sasl_username = "davidosomething"
+freenode.sasl_password
+freenode.sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
+freenode.sasl_timeout
+freenode.sasl_fail
+freenode.autoconnect = on
+freenode.autoreconnect
+freenode.autoreconnect_delay
+freenode.nicks
+freenode.username = "davidosomething"
+freenode.realname = "davidosomething"
+freenode.local_hostname
+freenode.command
+freenode.command_delay
+freenode.autojoin = "#archlinux,#bash,#git,#javascript,#linux,#neovim,#vim,#vimrocks,#zsh"
+freenode.autorejoin
+freenode.autorejoin_delay
+freenode.connection_timeout
+freenode.anti_flood_prio_high
+freenode.anti_flood_prio_low
+freenode.away_check
+freenode.away_check_max_nicks
+freenode.default_msg_kick
+freenode.default_msg_part
+freenode.default_msg_quit
+freenode.notify
