filter join/part/quit

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -288,6 +288,7 @@ title.type = window
 [notify]
 
 [filter]
+joinquit = on;*;irc_join,irc_part,irc_quit;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
