--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -254,7 +254,7 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 0
 nicklist.type = window
-status.color_bg = blue
+status.color_bg = 236
 status.color_delim = cyan
 status.color_fg = default
 status.conditions = ""
@@ -268,7 +268,7 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = blue
+title.color_bg = 236
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
