--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -171,7 +171,7 @@ freenode.realname = "davidosomething"
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#vimrocks,#zsh"
+freenode.autojoin = "#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#zsh"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
