--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -81,7 +81,6 @@ topic_new = white
 topic_old = default
 
 [network]
-alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
 ban_mask_default = "*!$ident@$host"
@@ -126,6 +125,7 @@ default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
 nicks = "davidosomething,davidosomething1,davidosomething2,davidosomething3,davidosomething4"
+nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
@@ -166,6 +166,7 @@ freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks
+freenode.nicks_alternate
 freenode.username = "davidosomething"
 freenode.realname = "davidosomething"
 freenode.local_hostname
