--- a/linux/autostart/terminator.desktop
+++ b/linux/autostart/terminator.desktop
@@ -138,7 +138,7 @@ Comment[vi]=Mở nhiều terminal trong cùng cửa sổ
 Comment[zh_CN]=一个窗口里多个终端
 Comment[zh_TW]=一視窗內含多個終端機
 TryExec=terminator
-Exec=terminator --working-directory="$HOME" 
+Exec=terminator --geometry=640x480-50-50
 Icon=terminator
 Type=Application
 Categories=GNOME;GTK;Utility;TerminalEmulator;System;
@@ -146,7 +146,7 @@ StartupNotify=true
 X-Ubuntu-Gettext-Domain=terminator
 X-Ayatana-Desktop-Shortcuts=NewWindow;
 [NewWindow Shortcut Group]
-Name=Open a New Window
-Exec=terminator --working-directory="$HOME" 
+Name=New Terminator Window
+Exec=terminator --geometry=640x480-50-50
 TargetEnvironment=Unity
 
