--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,10 @@
-set   -g  default-terminal  "screen-256color"
-set   -g  prefix            C-a
-set   -g  base-index        1
-set   -g  status-utf8       on
-setw  -g  utf8              on
-setw  -g  mode-mouse        on
+set-option          -g  default-terminal  "screen-256color"
+set-option          -g  prefix            C-a
+set-option          -g  base-index        1
+set-option          -g  status-utf8       on
+set-window-option   -g  utf8              on
+set-window-option   -g  mode-mouse        on
+set-window-option   -g  xterm-keys        on
+
 
 # vim: ft=tmux
