--- a/linux/terminator/config
+++ b/linux/terminator/config
@@ -25,6 +25,7 @@
   edit_tab_title = None
   edit_terminal_title = None
   edit_window_title = None
+  full_screen = <Primary><Super>f
   go_down = <Primary><Super>Down
   go_left = <Primary><Super>Left
   go_next = None
