--- a/markdownlint/config.json
+++ b/markdownlint/config.json
@@ -5,6 +5,8 @@
   "MD004": { "style": "dash" },
   "MD007": { "indent": 4 },
   "MD012": false,
+  "MD013": false,
+  "MD026": false,
   "MD033": false,
   "MD036": false,
   "MD041": false
