--- a/termite/config
+++ b/termite/config
@@ -9,7 +9,11 @@ cursor_blink            = on
 cursor_shape            = block
 dynamic_title           = true
 # filter_unmatched_urls
+
+# fallback and desired fonts
+font                    = DejaVu Sans Mono 9
 font                    = Fira Mono 10
+
 fullscreen              = false
 geometry                = 144x56+800-50
 # icon_name
