tmux settings and rxvt terminfo

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,29 @@
 # tmux/tmux.conf
 
+# $TERM
 set-option          -g  default-terminal  "screen-256color"
-set-option          -g  prefix            C-a
-set-option          -g  base-index        1
-set-option          -g  status-utf8       on
+
+# Use UTF-8
+set-option          -g  utf8
 set-window-option   -g  utf8              on
+set-option          -g  status-utf8       on
+
+# Keycodes
 set-window-option   -g  xterm-keys        on
+
+# Prefix -- leave on C-b since I actually use vim's C-a
+#set-option          -g  prefix            C-a
+#unbind  C-b
+
+# Start numbering from 1
+set-option          -g  base-index        1
+set-window-option   -g  pane-base-index   1
+
+# Reload tmux.conf
+bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
+
+# Vim splitting, (v)ertical and horizontal (s)plit
+bind    v   split-window -h
+bind    s   split-window -v
 
 # vim: ft=tmux
