use tmux-256color terminfo in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # tmux/tmux.conf
 
 # $TERM
-set-option          -g  default-terminal  "screen-256color"
+set-option          -g  default-terminal  "tmux-256color"
 
 # Use UTF-8
 set-option          -g  utf8
