--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # tmux/tmux.conf
 
-# $TERM
+# $TERM -- note that this uses a custom terminfo built against xterm so it
+# won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
 set-option          -g  default-terminal  "tmux-256color"
 
 # Use UTF-8
@@ -10,6 +11,8 @@ set-option          -g  status-utf8       on
 
 # Keycodes
 set-window-option   -g  xterm-keys        on
+# Reduce delay
+set-option          -gs escape-time       1
 
 # Prefix -- leave on C-b since I actually use vim's C-a
 #set-option          -g  prefix            C-a
@@ -22,8 +25,20 @@ set-window-option   -g  pane-base-index   1
 # Reload tmux.conf
 bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
 
-# Vim splitting, (v)ertical and horizontal (s)plit
+# Vim-style splitting, (v)ertical and horizontal (s)plit
 bind    v   split-window -h
 bind    s   split-window -v
+
+# Vim-style pane navigation
+bind    h   select-pane -L
+bind    j   select-pane -D
+bind    k   select-pane -U
+bind    l   select-pane -R
+
+# Vim-style pane resizing
+bind    H   resize-pane -L 4
+bind    J   resize-pane -D 4
+bind    K   resize-pane -U 4
+bind    L   resize-pane -R 4
 
 # vim: ft=tmux
