add tpm as gitmodule, vim tmux compatibility, tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,44 +1,102 @@
 # tmux/tmux.conf
 
-# $TERM -- note that this uses a custom terminfo built against xterm so it
-# won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
-set-option          -g  default-terminal  "tmux-256color"
+# ============================================================================
+# Plugins via tpm
+
+set-environment   -g TMUX_PLUGIN_MANAGER_PATH "${DOTFILES}/tmux/plugins"
+
+# Define plugins using this method since I keep .tmux.conf outside of $HOME
+set-option        -g  @tpm_plugins '  \
+  tmux-plugins/tpm                    \
+  tmux-plugins/tmux-prefix-highlight  \
+'
+
+# ============================================================================
+# Environment
 
 # Use UTF-8
 set-option          -g  utf8
-set-window-option   -g  utf8              on
-set-option          -g  status-utf8       on
+set-window-option   -g  utf8                on
 
+# $TERM -- note that this uses a custom terminfo built against xterm so it
+# won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
+set-option          -g  default-terminal    "tmux-256color"
+
+# for vim, focus pane on event like filemodified alerts
+set-option          -g  focus-events        on
+
+# Set env vars with parsed tmux version
+# Taken from tmux-powerline
+run-shell \
+  "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
+
+# ============================================================================
+# Mouse settings
+
+if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
+  'set-option -g mouse on'
+
+# ============================================================================
+# Keyboard settings
+
+# ----------------------------------------------------------------------------
 # Keycodes
-set-window-option   -g  xterm-keys        on
+set-window-option   -g  xterm-keys          on
 # Reduce delay
-set-option          -gs escape-time       1
+set-option          -gs escape-time         1
 
-# Prefix -- leave on C-b since I actually use vim's C-a
+# ----------------------------------------------------------------------------
+# Prefix -- leave on C-b since I actually use vim's C-a but never use C-b
+# (which is similar enough to pagination via C-d)
 #set-option          -g  prefix            C-a
 #unbind  C-b
 
-# Start numbering from 1
-set-option          -g  base-index        1
-set-window-option   -g  pane-base-index   1
-
+# ----------------------------------------------------------------------------
 # Reload tmux.conf
 bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
 
-# Vim-style splitting, (v)ertical and horizontal (s)plit
-bind    v   split-window -h
-bind    s   split-window -v
+# ============================================================================
+# Statusline
 
+set-option          -g  status-utf8         on
+
+# Update status more often (5 secs)
+set-option          -gs status-interval     5
+
+set-option          -g status-right         \
+  '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+
+# ============================================================================
+# Window and pane management
+
+# ----------------------------------------------------------------------------
+# Start numbering from 1
+set-option          -g  base-index          1
+set-window-option   -g  pane-base-index     1
+
+# ----------------------------------------------------------------------------
+# Vim-style splitting, (v)ertical and horizontal (s)plit (and unbind defaults)
+bind    v     split-window -h
+unbind  '"'
+bind    s     split-window -v
+unbind  %
+
+# ----------------------------------------------------------------------------
 # Vim-style pane navigation
-bind    h   select-pane -L
-bind    j   select-pane -D
-bind    k   select-pane -U
-bind    l   select-pane -R
+bind    h     select-pane -L
+bind    j     select-pane -D
+bind    k     select-pane -U
+bind    l     select-pane -R
 
+# ----------------------------------------------------------------------------
 # Vim-style pane resizing
-bind    H   resize-pane -L 4
-bind    J   resize-pane -D 4
-bind    K   resize-pane -U 4
-bind    L   resize-pane -R 4
+bind    H     resize-pane -L 4
+bind    J     resize-pane -D 4
+bind    K     resize-pane -U 4
+bind    L     resize-pane -R 4
+
+# ============================================================================
+# tpm init -- keep at bottom
+run "${DOTFILES}/tmux/plugins/tpm/tpm"
 
 # vim: ft=tmux
