more tmux conf and add zsh-autosuggest

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,8 @@
 # tmux/tmux.conf
+#
+# This file is used only when running tmux using my shell alias.
+# It is not symlinked into home.
+#
 
 # ============================================================================
 # Plugins via tpm
@@ -56,15 +60,26 @@ set-option          -gs escape-time         1
 bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
 
 # ============================================================================
+# Title
+
+set-option          -g  set-titles          on
+set-option          -g  set-titles-string   \
+  "#P:#W in #S on #H"
+
+# ============================================================================
 # Statusline
 
 set-option          -g  status-utf8         on
 
-# Update status more often (5 secs)
-set-option          -gs status-interval     5
+# Status bar on top -- looks better when vim active since commandline is at
+# bottom
+set-option          -g  status-position     top
 
-set-option          -g status-right         \
-  '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+# Update status more often (1 sec)
+set-option          -gs status-interval     1
+
+set-option          -g  status-right        \
+  '#{prefix_highlight} | %a %Y-%m-%d %H:%M '
 
 # ============================================================================
 # Window and pane management
