--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,8 +78,23 @@ set-option          -g  status-position     top
 # Update status more often (1 sec)
 set-option          -gs status-interval     1
 
+# ----------------------------------------------------------------------------
+# Colors
+
+set-option          -g  status-bg           colour237
+set-option          -g  status-fg           colour244
+
+# Active window in white
+set-window-option   -g  window-status-current-fg  colour250
+
+# ----------------------------------------------------------------------------
+# Contents
+
+set-option          -g  status-justify      centre
+set-option          -g  status-left         \
+  ' '
 set-option          -g  status-right        \
-  '#{prefix_highlight} | %a %Y-%m-%d %H:%M '
+  ' #{prefix_highlight}'
 
 # ============================================================================
 # Window and pane management
@@ -88,6 +103,7 @@ set-option          -g  status-right        \
 # Start numbering from 1
 set-option          -g  base-index          1
 set-window-option   -g  pane-base-index     1
+set-option          -g  renumber-windows    on
 
 # ----------------------------------------------------------------------------
 # Vim-style splitting, (v)ertical and horizontal (s)plit (and unbind defaults)
