probably not a good idea to use xterm terminfo in tmux, but whatevs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,7 +24,12 @@ set-window-option   -g  utf8                on
 
 # $TERM -- note that this uses a custom terminfo built against xterm so it
 # won't work in some terminal emulators. See $DOTFILES/terminfo/README.md
-set-option          -g  default-terminal    "tmux-256color"
+# OSX: assume I'm using this custom xterm terminfo in iterm2
+if-shell 'test "${DOTFILES_DISTRO}" = "osx"' \
+  'set-option -g default-terminal "xterm-256color-italic"'
+# Arch Linux: tmux-256color terminfo comes with tmux
+if-shell 'test "${DOTFILES_DISTRO}" = "archlinux"' \
+  'set-option -g default-terminal "tmux-256color"'
 
 # for vim, focus pane on event like filemodified alerts
 set-option          -g  focus-events        on
