auto-enter copy mode for tmux scrolling

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -64,6 +64,15 @@ set-option          -gs escape-time         1
 # Reload tmux.conf
 bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
 
+# ----------------------------------------------------------------------------
+# Scrolling with page-* (auto enter copy mode)
+if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
+  'bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"'
+if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
+  'bind-key -t vi-copy PPage page-up'
+if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
+  'bind-key -t vi-copy NPage page-down'
+
 # ============================================================================
 # Title
 
