c-* variants for moving through panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -128,10 +128,15 @@ unbind  %
 
 # ----------------------------------------------------------------------------
 # Vim-style pane navigation
+# C-* variants so can hold ctrl down
 bind    h     select-pane -L
+bind  C-h     select-pane -L
 bind    j     select-pane -D
+bind  C-j     select-pane -D
 bind    k     select-pane -U
+bind  C-k     select-pane -U
 bind    l     select-pane -R
+bind  C-l     select-pane -R
 
 # ----------------------------------------------------------------------------
 # Vim-style pane resizing
