tmux version check

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,15 +34,10 @@ if-shell 'test "${DOTFILES_DISTRO}" = "archlinux"' \
 # for vim, focus pane on event like filemodified alerts
 set-option          -g  focus-events        on
 
-# Set env vars with parsed tmux version
-# Taken from tmux-powerline
-run-shell \
-  "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
-
 # ============================================================================
 # Mouse settings
 
-if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
+if-shell "[[ $(tmux -V | cut -d' ' -f2) > 2 ]]" \
   'set-option -g mouse on'
 
 # ============================================================================
@@ -66,12 +61,11 @@ bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
 
 # ----------------------------------------------------------------------------
 # Scrolling with page-* (auto enter copy mode)
-if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
-  'bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"'
-if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
-  'bind-key -t vi-copy PPage page-up'
-if-shell "#{$TMUX_VERSION_MAJOR} -ge 2" \
-  'bind-key -t vi-copy NPage page-down'
+if-shell "[[ $(tmux -V | cut -d' ' -f2) > 2 ]]" ' \
+  bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"; \
+  bind-key -t vi-copy PPage page-up;   \
+  bind-key -t vi-copy NPage page-down; \
+'
 
 # ============================================================================
 # Title
