--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -107,6 +107,11 @@ set-option          -g  status-right        \
 # ============================================================================
 # Window and pane management
 
+set-option          -g  pane-border-fg        "#2e2e2e"
+set-option          -g  pane-border-bg        black
+set-option          -g  pane-active-border-fg green
+set-option          -g  pane-active-border-bg black
+
 # ----------------------------------------------------------------------------
 # Start numbering from 1
 set-option          -g  base-index          1
