--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,8 @@ if-shell 'test "${DOTFILES_DISTRO}" = "archlinux"' \
 # for vim, focus pane on event like filemodified alerts
 set-option          -g  focus-events        on
 
+set-option          -g  history-limit       10000
+
 # ============================================================================
 # Mouse settings
 
