split tmux2 confs to sep files

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@
 # It is not symlinked into home.
 #
 
+if-shell "[[ $(tmux -V | cut -d' ' -f2) > 2 ]]" \
+  'set-environment -g TMUX_2 "1"'
+
 # ============================================================================
 # Plugins via tpm
 
@@ -38,22 +41,11 @@ set-option          -g  history-limit       10000
 
 # ============================================================================
 # Mouse settings
-
-if-shell "[[ $(tmux -V | cut -d' ' -f2) > 2 ]]" \
-  'set-option -g mouse on'
-
-# ----------------------------------------------------------------------------
-# shell scrolling (not for submode)
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind -t vi-copy    C-WheelUpPane   halfpage-up
-bind -t vi-copy    C-WheelDownPane halfpage-down
-bind -t emacs-copy C-WheelUpPane   halfpage-up
-bind -t emacs-copy C-WheelDownPane halfpage-down
+if-shell '[[ -n "$TMUX_2" ]]'   'source-file "${DOTFILES}/tmux/t2mouse.conf"'
 
 # ============================================================================
 # Keyboard settings
+if-shell '[[ -n "$TMUX_2" ]]'   'source-file "${DOTFILES}/tmux/t2keyboard.conf"'
 
 # ----------------------------------------------------------------------------
 # Keycodes
@@ -70,14 +62,6 @@ set-option          -gs escape-time         1
 # ----------------------------------------------------------------------------
 # Reload tmux.conf
 bind    r   source-file "${DOTFILES}/tmux/tmux.conf" \; display "R!"
-
-# ----------------------------------------------------------------------------
-# Scrolling with page-* (auto enter copy mode)
-if-shell "[[ $(tmux -V | cut -d' ' -f2) > 2 ]]" ' \
-  bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"; \
-  bind-key -t vi-copy PPage page-up;   \
-  bind-key -t vi-copy NPage page-down; \
-'
 
 # ============================================================================
 # Title
