use local ca-cert bundle and connect and autojoin espernet channels

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -184,3 +184,42 @@ freenode.default_msg_kick
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
+esper.addresses = "irc.esper.net"
+esper.proxy
+esper.ipv6
+esper.ssl
+esper.ssl_cert
+esper.ssl_priorities
+esper.ssl_dhkey_size
+esper.ssl_fingerprint
+esper.ssl_verify
+esper.password
+esper.capabilities
+esper.sasl_mechanism
+esper.sasl_username
+esper.sasl_password
+esper.sasl_key
+esper.sasl_timeout
+esper.sasl_fail
+esper.autoconnect = on
+esper.autoreconnect
+esper.autoreconnect_delay
+esper.nicks
+esper.nicks_alternate
+esper.username
+esper.realname
+esper.local_hostname
+esper.command
+esper.command_delay
+esper.autojoin = "= "#FTB,#computercraft""
+esper.autorejoin
+esper.autorejoin_delay
+esper.connection_timeout
+esper.anti_flood_prio_high
+esper.anti_flood_prio_low
+esper.away_check
+esper.away_check_max_nicks
+esper.default_msg_kick
+esper.default_msg_part
+esper.default_msg_quit
+esper.notify
