join more mc chans

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -211,7 +211,7 @@ esper.realname
 esper.local_hostname
 esper.command
 esper.command_delay
-esper.autojoin = "= "#FTB,#computercraft""
+esper.autojoin = "= "#FTB,#computercraft,#enderio,#journeymap,#rftools""
 esper.autorejoin
 esper.autorejoin_delay
 esper.connection_timeout
