--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -172,7 +172,7 @@ freenode.realname = "davidosomething"
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
+freenode.autojoin = "#adops,#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
