same cfg esper and freenode

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -129,97 +129,31 @@ nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
-realname = ""
 sasl_fail = continue
-sasl_key = ""
-sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
-sasl_username = ""
-ssl = off
+sasl_mechanism = ecdsa-nist256p-challenge
+sasl_username = "davidosomething"
+sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
+ssl = on
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 username = "davidosomething"
+realname = "davidosomething"
 
 [server]
 freenode.addresses = "chat.freenode.net/6697"
-freenode.proxy
-freenode.ipv6
 freenode.ssl = on
-freenode.ssl_cert
-freenode.ssl_priorities
-freenode.ssl_dhkey_size
-freenode.ssl_fingerprint
-freenode.ssl_verify
-freenode.password
-freenode.capabilities
-freenode.sasl_mechanism = ecdsa-nist256p-challenge
-freenode.sasl_username = "davidosomething"
-freenode.sasl_password
-freenode.sasl_key = "%h/../../.secret/weechat/ecdsa.pem"
-freenode.sasl_timeout
-freenode.sasl_fail
 freenode.autoconnect = on
-freenode.autoreconnect
-freenode.autoreconnect_delay
-freenode.nicks
-freenode.nicks_alternate
 freenode.username = "davidosomething"
 freenode.realname = "davidosomething"
-freenode.local_hostname
-freenode.command
-freenode.command_delay
 freenode.autojoin = "#adops,#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
-freenode.autorejoin
-freenode.autorejoin_delay
-freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
-freenode.away_check
-freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
-freenode.notify
 esper.addresses = "irc.esper.net"
-esper.proxy
-esper.ipv6
-esper.ssl
-esper.ssl_cert
-esper.ssl_priorities
-esper.ssl_dhkey_size
-esper.ssl_fingerprint
-esper.ssl_verify
-esper.password
-esper.capabilities
-esper.sasl_mechanism
-esper.sasl_username
-esper.sasl_password
-esper.sasl_key
-esper.sasl_timeout
-esper.sasl_fail
+esper.ssl = on
 esper.autoconnect = on
-esper.autoreconnect
-esper.autoreconnect_delay
-esper.nicks
-esper.nicks_alternate
-esper.username
-esper.realname
-esper.local_hostname
-esper.command
-esper.command_delay
-esper.autojoin = "= "#FTB,#computercraft,#enderio,#forestry,#journeymap,#rftools""
-esper.autorejoin
-esper.autorejoin_delay
-esper.connection_timeout
-esper.anti_flood_prio_high
-esper.anti_flood_prio_low
-esper.away_check
-esper.away_check_max_nicks
-esper.default_msg_kick
-esper.default_msg_part
-esper.default_msg_quit
-esper.notify
+esper.username = "davidosomething"
+esper.realname = "davidosomething"
+esper.autojoin = "#FTB,#computercraft,#enderio,#forestry,#journeymap,#rftools"
