--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -120,8 +120,8 @@ command = ""
 command_delay = 0
 connection_timeout = 60
 default_msg_kick = ""
-default_msg_part = "WeeChat %v"
-default_msg_quit = "WeeChat %v"
+default_msg_part = ""
+default_msg_quit = ""
 ipv6 = on
 local_hostname = ""
 nicks = "davidosomething,davidosomething1,davidosomething2,davidosomething3,davidosomething4"
@@ -151,7 +151,7 @@ freenode.autoconnect = on
 freenode.username = "davidosomething"
 freenode.realname = "davidosomething"
 freenode.autojoin = "#adops,#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
-esper.addresses = "irc.esper.net"
+esper.addresses = "irc.esper.net/6697"
 esper.ssl = on
 esper.autoconnect = on
 esper.username = "davidosomething"
