move linux git cfg back, don't join adops

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -150,7 +150,7 @@ freenode.ssl = on
 freenode.autoconnect = on
 freenode.username = "davidosomething"
 freenode.realname = "davidosomething"
-freenode.autojoin = "#adops,#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
+freenode.autojoin = "#archlinux,#bash,#git,##javascript,##linux,#neovim,#vim,#web,#zsh"
 esper.addresses = "irc.esper.net/6697"
 esper.ssl = on
 esper.autoconnect = on
