--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -156,4 +156,4 @@ esper.ssl = on
 esper.autoconnect = on
 esper.username = "davidosomething"
 esper.realname = "davidosomething"
-esper.autojoin = "#FTB,#computercraft,#enderio,#forestry,#journeymap,#rftools"
+esper.autojoin = "#FTB,#computercraft,#enderio,#forestry,#journeymap,#rftools,#vazkii"
