weechat appearance and alt-l to toggle nicks

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -262,7 +262,7 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[time],[buffer_last_number],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll,[lag],[hotlist],completion"
+status.items = "[time],[buffer_plugin],buffer_name+(buffer_modes),scroll,completion"
 status.position = bottom
 status.priority = 500
 status.separator = off
@@ -507,7 +507,7 @@ meta-j97 = "/buffer *97"
 meta-j98 = "/buffer *98"
 meta-j99 = "/buffer *99"
 meta-k = "/input grab_key_command"
-meta-l = "/window bare"
+meta-l = "/bar toggle nicklist"
 meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
